--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         // Redirection automatique après 3 secondes
         setTimeout(() => {
-          window.location.href = "accueil_es.html?lang=es";
+          window.location.href = "accueil_fr.html?lang=fr";
         }, 3000);
 
         return;
@@ -181,7 +181,7 @@
 
     // Accès direct au portfolio si l’utilisateur clique
     portfolioBtn.addEventListener("click", () => {
-      window.location.href = "accueil_es.html";
+      window.location.href = "accueil_fr.html";
     });
 
     // ================= BOUTON LANGUE =================
