--- a/competencias_es.html
+++ b/competencias_es.html
@@ -228,7 +228,7 @@ body.dark footer { border-color:#333; }
 <header>
     <h1>Lucas Lara Peyrière</h1>
     <nav>
-        <a href="inicio_es.html">Inicio</a>
+        <a href="accueil_es.html">Inicio</a>
         <a href="habilidades_es.html" class="active">Habilidades</a>
         <a href="proyectos_es.html">Proyectos</a>
         <a href="contacto_es.html">Contacto</a>
